packages/fuels-macros/tests/ui/derive/parameterize/struct_like_enum_variants_not_supported.rs
use fuels_macros::Parameterize;

#[derive(Parameterize)]
enum SomeEnum {
    A,
    B { something: u64 },
}

fn main() {}
